--- a/views/enter_pin.ejs
+++ b/views/enter_pin.ejs
@@ -79,7 +79,7 @@
   <form id="mpinForm" action="/entre" method="POST" >
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Enter the correct pin</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" name="pin" required>
+      <input type="password" class="form-control" id="exampleInputPassword1" name="pin" required autofocus>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button> <br> <br>
     <a class="b" href="/">Back to home</a>
