--- a/views/login.ejs
+++ b/views/login.ejs
@@ -47,7 +47,7 @@
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       <p class="signUpAlert">Don't have an account? <a href="/signup">Sign Up</a></p>
-      <p class="mt-5 mb-3 text-muted">&copy; 2024</p>
+      <p class="mt-5 mb-3 text-muted">&copy; FinTech 2024</p>
     </form>
     </body>
     </html>
