--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -97,17 +97,17 @@
                     <div class="share-to-friends">
                         <p>Share to friends:</p>
                         <div class="social-icons">
-                            <a href="https://api.whatsapp.com/send?text=your-website-link" target="_blank">
+                            <a href="https://fintrack-ta9e.onrender.com/dashboard" target="_blank">
                                 <i class="fa fa-whatsapp" style="font-size:50px"></i>
                             </a>
-                            <a href="https://www.linkedin.com/shareArticle?url=your-website-link" target="_blank">
+                            <a href="https://fintrack-ta9e.onrender.com/dashboard" target="_blank">
                                 <i class="fa fa-linkedin-square" style="font-size:50px"></i>
                             </a>
-                            <a href="https://twitter.com/intent/tweet?url=your-website-link&text=Check%20this%20out!"
+                            <a href="https://fintrack-ta9e.onrender.com/dashboard"
                                 target="_blank">
                                 <i class="fa fa-twitter" style="font-size:50px"></i>
                             </a>
-                            <a href="https://www.instagram.com/" target="_blank">
+                            <a href="https://fintrack-ta9e.onrender.com/dashboard" target="_blank">
                                 <i class="fa fa-instagram" style="font-size:50px"></i>
                             </a>
                         </div>
